extends GridContainer

# Declare member variables here. Examples:
# var a = 2
# var b = "text"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_upgLaserBtn_pressed():
	pass # Replace with function body.


func _on_upgEnginesBtn_pressed():
	pass # Replace with function body.


func _on_upgShieldsBtn_pressed():
	pass # Replace with function body.


func _on_upgMissilesBtn_pressed():
	# faster reload, larger explosion radius
	pass # Replace with function body.


func _on_upgMagnetBtn_pressed():
	# expands the area of the player magnet
	pass # Replace with function body.


func _on_upgTargetingBtn_pressed():
	# implement mouselook and strafing.
	pass # Replace with function body.
	
